  (Scott)
- Fixed a crash on invalid method in ReflectionParameter constructor.
  (Christian Seiler)

- Fixed bug #45956 (parse_ini_file() does not return false with syntax errors
  in parsed file). (Jani)
- Fixed bug #45862 (get_class_vars is inconsistent with 'protected' and 
  'private' variables). (ilewis at uk dot ibm dot com, Felipe)
- Fixed bug #45805 (Crash on throwing exception from error handler). (Dmitry)
- Fixed bug #45765 (ReflectionObject with default parameters of self::xxx cause
  an error). (Felipe)
- Fixed bug #45751 (Using auto_prepend_file crashes (out of scope stack address
  use)). (basant dot kukreja at sun dot com) 
- Fixed bug #45705 (rfc822_parse_adrlist() modifies passed address parameter).
  (Jani)
- Fixed bug #45691 (Some per-dir or runtime settings may leak into other
  requests). (Moriyoshi)
- Fixed bug #45581 (htmlspecialchars() double encoding &#x hex items). (Arnaud)
- Fixed bug #45568 (ISAPI doesn't properly clear auth_digest in header).
  (Patch by: navara at emclient dot com)
- Fixed bug #45556 (Return value from callback isn't freed). (Felipe)
- Fixed bug #45555 (Segfault with invalid non-string as 
  register_introspection_callback). (Christian Seiler)
- Fixed bug #45486 (mb_send_mail(); header 'Content-Type: text/plain; charset=' 
  parsing incorrect). (Felipe)
- Fixed bug #45485 (strip_tags and <?XML tag). (Felipe)
- Fixed bug #45460 (imap patch for fromlength fix in imap_headerinfo doesn't 
  accept lengths of 1024). (Felipe, andrew at lifescale dot com)
- Fixed bug #45449 (filesize() regression using ftp wrapper). 
  (crrodriguez at suse dot de)
- Fixed bug #45423 (fastcgi parent process doesn't invoke php_module_shutdown
  before shutdown) (basant dot kukreja at sun dot com)
- Fixed bug #45406 (session.serialize_handler declared by shared extension 
  fails). (Kalle, oleg dot grenrus at dynamoid dot com)
- Fixed bug #45392 (ob_start()/ob_end_clean() and memory_limit). (Arnaud)